Date	Added

2006/08/31
	* Added setting attack_walk_delay which specifies whether a character
	  should (or not) be able to move inmediately after starting a normal attack
	  (battle.conf). Defaults to 0 since that's what Aegis uses. [Skotlex]
	* Corrected battle config name max_walk_rate, it should be named
	  max_walk_speed. [Skotlex]
2006/08/29
	* monster_ai&1 now only signals whether mobs should update their target
	  cell while chasing more frequently (rather than being state-driven like
	  Aegis) [Skotlex]
	* Changed the defaults of view_range_rate and chase_range_rate to 120 to
	  aproximate better Aegis's view ranges (which are square areas and not
	  circles), so eA's default of 100 leads to a circular area contained
	  within a 21x21 square zone (what Aegis uses), by using 20%, the circular
	  area increases range to 12, which better approximates Aegis's 21x21 area.
	  [Skotlex]
2006/08/24
	* Changed the default of clear_skills_on_death to 0 [Skotlex]
	* Added setting clear_skills_on_warp to specify when a character's
	  land-based skills are deleted when the caster changes maps. Defaults to all
	  types (skill.conf). [Skotlex]
	* The previous setting now obsoletes traps_setting &2, which now can only
	  be 0/1. [Skotlex]
2006/08/21
	* Removed config setting "muting_players", and expanded the manner_system
	  config to specify how having negative manner (mute) affects a player (see
	  battle/misc.conf). [Skotlex]
	* Expanded the pk_mode setting from no/yes to 0/1/2. 1 is normal pk_mode,
	  if 2 is used, it makes killing players give you a loss of 5 manner points.
	  [Skotlex]
2006/08/18
	* Added monster_ai&128 to make aggressive mobs ignore that behaviour of
	  always picking Homun targets above player targets regardless of who is
	  closer. [Skotlex]
	* Added guild_aura (skill.conf) setting so you can specify when it works
	  and if it works on the guild-master itself. Defaults to working all the
	  time on everyone except GM. [Skotlex]
2006/08/14